Added few changes and features to the admin side and also UI changes

--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -70,3 +70,18 @@ html {
 .animate-slide-in-right {
   animation: slide-in-right 1s ease-out forwards;
 }
+@keyframes zoomIn {
+  from {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.animate-zoomIn {
+  animation: zoomIn 0.3s ease-out;
+}
+
