--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -84,4 +84,22 @@ html {
 .animate-zoomIn {
   animation: zoomIn 0.3s ease-out;
 }
+@keyframes zoom-in-out {
+  0% {
+    transform: scale(0.3);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1.3);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.animate-zoom-in-out {
+  animation: zoom-in-out 2.5s ease-in-out forwards;
+}
 
